@@ -51,6 +51,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 9219) Auth plugins can control editing RealName/Email/Nick preferences
 * New hook: MessageNotInMwNs to handle localised messages that aren't in the
   Mediawiki Namespace, before checking the message files
+* (bug 18466) Add note or warning when overruling a move (semi-)protection
 
 === Bug fixes in 1.16 ===
 
